--- a/plantillas/base_publica.html
+++ b/plantillas/base_publica.html
@@ -27,7 +27,7 @@
 						<div class="container">
 							<ul class="nav">
 								<li><a href="/">{% trans "Inicio" %}</a></li>
-								<li><a href="/registro/">{% trans "Registro" %}</a></li>
+								<li><a href="/registro/">{% trans "Registrate" %}</a></li>
 								<li><a href="/login/">{% trans "Login" %}</a></li>
 								<li><a href="/contacto/">{% trans "Contacto" %}</a></li>
 							</ul>
