--- a/plantillas/contribuir.html
+++ b/plantillas/contribuir.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block contenido %}
-	<a href="/nuevapelicula">Introducir Pelicula</a><br>
+	<a href="/nuevapelicula">Introducir Película</a><br>
 	<a href="/nuevoactor">Introducir Actor</a><br>
 	<a href="/nuevodirector">Introducir Director</a>
 {% endblock %}
