--- a/plantillas/privada.html
+++ b/plantillas/privada.html
@@ -5,7 +5,7 @@
 <!-- Jumbotron -->
       <div class="jumbotron">
         <h1>¡Películas aqui!</h1>
-        <p class="lead">Todo lo que necesites saber sobre las películas lo tendras aquí. Solo entra y encontraras todas las peliculas estrenadas hasta ahora y proximos estrenos. Proximemente tambien series.</p>
+        <p class="lead">Todo lo que necesites saber sobre las películas lo tendras aquí. Solo entra y encontraras todas las peliculas estrenadas hasta ahora y proximos estrenos. Proximamente tambien series.</p>
         <a class="btn btn-large btn-success" href="/categorias/">¡Empieza hoy!</a>
       </div>
 
