--- a/plantillas/registro.html
+++ b/plantillas/registro.html
@@ -10,7 +10,7 @@
 	<label for="id_nombre">Nombre:</label> <input class="input-block-level" id="id_nombre" name="nombre" type="text" {% if form.nombre.value %}value="{{form.nombre.value}}" {% endif %}/>
 	<label for="id_apellidos">Apellidos:</label> <input class="input-block-level" id="id_apellidos" name="apellidos" type="text" {% if form.apellidos.value %}value="{{form.apellidos.value}}" {% endif %}/>
 	<label for="id_correo">Correo electronico:</label> <input class="input-block-level" id="id_correo" name="correo" type="email" {% if form.correo.value %}value="{{form.correo.value}}" {% endif %}/>
-	<label for="id_fecha_nacimiento">Fecha de ancimento:</label> <input class="input-block-level" id="id_fecha_nacimiento" name="fecha_nacimiento" type="text" {% if form.fecha_nacimiento.value %}value="{{form.fecha_nacimiento.value}}" {% endif %}/>
+	<label for="id_fecha_nacimiento">Fecha de ancimento:</label> <input class="input-block-level" id="id_fecha_nacimiento" name="fecha_nacimiento" type="date" {% if form.fecha_nacimiento.value %}value="{{form.fecha_nacimiento.value}}" {% endif %}/>
 	<label for="id_avatar">Avatar:</label> <input lass="input-block-level" id="id_avatar" name="avatar" type="file" />
 	<button class="btn btn-large btn-primary" type="submit">Sign up</button>
 </form>
