--- a/plantillas/director.html
+++ b/plantillas/director.html
@@ -5,21 +5,36 @@
 <div class="perfil_director">
 	<div class="nombre_director">
 		Nombre: <a href="/director/{{director.id}}">{{director.nombre}} {{director.apellidos}}</a> <br>
-		Edad: XX <br>
-		Nacionalidad: XX
+		Fecha de nacimiento: {{director.fecha_nacimiento}} <br>
+		Edad: {{edad}} <br>
+		Nacionalidad: {{director.nacionalidad}}
 	</div>
 	<img src="{{MEDIA_URL}}{{director.foto}}" alt="" class="retrato">
 	<div class="biografia">
-		<h3>Biografia:</h3> 
+		<h3>Biografía:</h3> 
 		<p>{{director.biografia}}</p>
 	</div>
 	<div class="peliculas_dirige">
-		<h3>Peliculas dirigidas:</h3>
+		<h3>Películas dirigidas:</h3>
 		<ul>
 			{% for p in peliculas %}
 				<li><a href="/pelicula/{{p.id}}">{{p.titulo}}</a></li>
 			{% endfor %}
 		</ul>
+	</div>
+</div>
+<div class="comentarios">
+	<h3>Comentários:</h3>
+		<ul>
+			{% for c in director.comentarios.all %}
+				<li><a href="/perfil/{{c.autor.usuario}}">{{c.autor.usuario}}</a>: {{c.comentario}} <font color="#A9A4A4">{{c.fecha_modificacion}}</font></li>
+			{% endfor %}
+		</ul>
+	<div class="comenta">
+		<form class="form-signin" method="post" action="/comenta_director/{{director.id}}">{% csrf_token %}
+			<textarea cols="40" id="id_comentario" name="comentario" rows="5" value="{{formulario.coemntario.value}}" placeholder="Comentario..."></textarea>
+			<button class="btn btn-large btn-primary" type="submit">Comenta</button>
+		</form>
 	</div>
 </div>
 {% endblock %}
