--- a/plantillas/perfil.html
+++ b/plantillas/perfil.html
@@ -2,5 +2,34 @@
 {% load i18n %}
 
 {% block contenido %}
-{{user.usuario}}
+<div class="box_perfil">
+	<div class="info_perfil">
+		<h3>{{request.user.nombre}} {{request.user.apellidos}}</h3>
+	</div>
+	<img src="{{MEDIA_URL}}{{request.user.avatar}}" alt="" class="perfil_avatar">
+	<div class="mensajeria">
+		{% if mensajes %}
+				{% for m in mensajes %}
+						<div class="mensaje">
+							Mensaje de: <a href="/perfil/{{m.fro}}">{{m.fro}}</a>, recibido el: {{m.fecha_envio}}							 
+						</div>
+						<div class="contenido" style="display: none;">
+							{{m.mensaje}}
+						</div>
+				{% endfor %}
+		{% else %}
+			No tienes mensajes
+		{% endif %}
+	</div>
+</div>
+{% endblock %}
+
+{% block script %}
+<script> 
+$(document).ready(function(){
+  $(".mensaje").click(function(){
+    $(this).next().slideToggle("slow");
+  });
+});
+</script>
 {% endblock %}
