--- a/plantillas/base_privada.html
+++ b/plantillas/base_privada.html
@@ -25,6 +25,9 @@
 	                {% endfor %}
 	            </select>
 	        </form>
+	        <div class="buscador">
+	        	Buscar en Wikipedia: <input type="text" class="busca">
+	        </div>
 	        <div class="masthead">	
 				<h3 class="muted">Film Maniac</h3>
 				<div class="navbar">
